* [Weblcms] Fixed the not allowed message to show in the context of the tool, still making it possible to view other categories
* [LearningPath] Moved the navigation to the center of the screen
* [LearningPath] Making it possible to navigate with the arrows of the keyboard
* [LearningPath] Waiting for a learning path to set the flag to completed untill all the children have been viewed
* [LearningPath] Fixed the link to the progress overview
* [Assignment] Added a wizard for better usability in the add submission component, added a better confirmation message and added the option to send an email after a submission has been received
* [Repo Viewer] Fixed the importer to take the maximum number of selectable files into account
* [Common] Changed the way the css classes for columns are rendered, splitsing the css between header and content css

[02/07/2016]

* [Repository] Fixed fatal error in displayer block
* [Calendar] Fixed the home block links
* [Weblcms] Fixed calendar links to days
* [Learning Path] Make sure learning paths remain full screen and headerless in all relevant contexts
* [Learning Path] Re-added node-specific actions (assessment)
* [Common] Various translation fixes
* [Forum] Topic and subforum title synchronization
* [Forum] Fixed the direct link to the last post in a topic
* [Calendar] Fixed the untranslated week calendar header
* [Calendar] Popup datepicker calendar layout fixed
* [Common] PHP Mailer Bugfix
* [Home] Removed contexts of home blocks when no blocks are found for the current user
* [Repository] Bugfix search form in browser
* [Learning path] Make sure the step parameter is set to the parent step if the current item can't have any children
* [Assessment] constant typo fixed
* [Mail] Don't add the phpmailer config to the codebase
* [User] Make sure the profile picture in the form is not a cached version
* [Platform Groups] Fixed translations and readded the subscribe button

[12/08/2016]

* [Weblcms] Fixed course request denier